@@ -25,3 +25,40 @@ iast-grpc-java 8888 8083/grpc/send?text=1  https://github.com/HXSecurity/dongtai
 ```cmd
 docker run -it --rm -e IASTIP="http://IP" -e TOKEN="TOKEN" -e ProjectName="iast-grpc-java" registry.cn-hangzhou.aliyuncs.com/tscuite/bachang:iast-grpc-java-v11
 ```
+
+
+
+# Envs
+
+## IASTIP
+
+## TOKEN
+
+## ProjectName
+
+指定项目的版本，比如：
+
+
+
+## OPTIONS
+
+jvm选项，java启动应用的时候会拼接为jvm参数，比如：
+
+```
+docker run -it --rm -e IASTIP="http://IP" -e TOKEN="TOKEN" -e ProjectName="webgoat" -e OPTIONS='--add-opens="java.xml/com.sun.org.apache.xerces.internal.impl=ALL-UNNAMED"' registry.cn-hangzhou.aliyuncs.com/tscuite/bachang:webgoat-v20
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
